[project]
name = "prodsys"
version = "1.0.3"
description = "A useful module for production system simulation and optimization"
authors = [
    {name = "Sebastian Behrendt", email = "sebastian.behrendt@kit.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deap>=1.4.3",
    "email-validator>=2.3.0",
    "gurobipy>=12.0.3",
    "importlib-metadata>=8.7.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pathfinding>=1.0.17",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "scipy>=1.15.3",
    "simanneal>=0.5.0",
    "simpy>=4.1.1",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "matplotlib (>=3.7.2,<4.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "shapely (==2.0.2)",
    "pygeoops (==0.3.0)",
    "numpy (<2)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mkdocs-material>=9.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
    "ipywidgets>=8.0.0",
    "snakeviz>=2.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=2.0.0",
    "mkdocs-include-dir-to-nav>=0.0.1",
]
RL-control = [
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "tensorboard>=2.11.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocstrings[python]>=1.0.0",
]

